Fixes to checkout form

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -5,6 +5,11 @@ ru:
       format:
         unit: грн.
   activerecord: 
+    attributes:
+      address:
+        firstname: ФИО
+        address1: Комментарии
+        address2: Адрес
     errors: 
       models: 
         user:
